normalement le dernier commit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,8 @@
 							<li class="nav-item d-flex">
 
 								{% if app.user %}
-									<a href="/user/update/{{app.user.id}}">
+									<a  class="nav-link" href="/user/update/{{app.user.id}}">
+
 										{{
 										app.user.username
 									}}
