--- a/templates/template/form.html.twig
+++ b/templates/template/form.html.twig
@@ -7,15 +7,15 @@
 
 			{{ form_start(form) }}
 			<div class="form-group">
-				<h3>Nom de la template:</h3>
+				<h3>templates name:</h3>
 				{{ form_row(form.name)}}
 			</div>
 			<div class="form-group">
-				<h3>Image de la template:</h3>
+				<h3>image:</h3>
 				{{ form_row(form.image)}}
 			</div>
 			<div class="form-group">
-				<h3>Tag de la template:</h3>
+				<h3>Tag:</h3>
 				{{ form_row(form.tag)}}
 			</div>
 			<br>
