--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,10 +12,10 @@
 			<input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" required/>
 			<label for="password">Password: </label>
 			<input type="password" id="password" name="_password" class="form-control" required/>
-			<button type="submit" class="btn btn-primary mt-3">Connexion</button>
+			<button type="submit" class="btn btn-primary mt-3">login</button>
 		</form>
 		<form action="{{ path('User_create') }}" method="post">
-			<button class="btn btn-grey mt-3" >creat an account</button>
+			<button class="btn btn-grey mt-3" >Create an account</button>
 		</form>
 		
 	</div>
