--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -1,36 +1,45 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-	<div class="container mt-5">
-		<h1 class="text-center">Cree un nouvel utilisateurs</h1>
-		<form method="post">
-			{{ form_start(form) }}
-			<div class="form-group">
-				<h3>
-					Prenom de l'utilisateurs:</h3>
-				{{ form_row(form.prenom)}}
-			</div>
-			<div class="form-group">
-				<h3>
-					Nom de la l'utilisateurs:</h3>
-				{{ form_row(form.nom)}}
-			</div>
-			<div class="form-group">
-				<h3>
-					Email l'utilisateurs:</h3>
-				{{ form_row(form.email)}}
-			</div>
-			<div class="form-group">
-				<h3>
-					Username de la l'utilisateurs:</h3>
-				{{ form_row(form.username)}}
-			</div>
-			<div class="form-group">
-				<h3>password utilisateurs:</h3>
-				{{ form_row(form.password)}}
-			</div>
-			<button type="submit" class="btn btn-primary">Submit</button>
-			{{ form_end(form) }}
-			<hr>
-		</form>
-	</div>
+	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+		<div class="container mt-5">
+			<h1 class="text-center">edit  user</h1>
+			<form method="post">
+				{{ form_start(form) }}
+				<div class="form-group">
+					<h3>
+						first name:</h3>
+					{{ form_row(form.prenom)}}
+				</div>
+				<div class="form-group">
+					<h3>
+						last name:</h3>
+					{{ form_row(form.nom)}}
+				</div>
+				<div class="form-group">
+					<h3>
+						Email :</h3>
+					{{ form_row(form.email)}}
+				</div>
+				<div class="form-group">
+					<h3>
+						Username:</h3>
+					{{ form_row(form.username)}}
+				</div>
+
+				<br>
+				<button type="submit" class="btn btn-primary">Submit</button>
+				{{ form_end(form) }}
+				<hr>
+			</form>
+		</div>
+	{% else %}
+
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			You must be logged in to access this page.
+			<button type="button" class="btn btn-light" data-dismiss="alert" aria-label="Close">
+				<a href="/login">login</a>
+			</button>
+		</div>
+
+	{% endif %}
 {% endblock %}
